feat : Ai기능 수정
